<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_guide"
            android:title="@string/menu_guide" />
        <item
            android:id="@+id/nav_quiz"
            android:title="@string/menu_quiz" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_contribute"
            android:title="@string/menu_contribute" />
        <item
            android:id="@+id/nav_moreapps"
            android:title="@string/menu_moreapps" />
        <item
            android:id="@+id/nav_blog"
            android:title="@string/menu_blog" />
        <item
            android:id="@+id/nav_credits"
            android:title="@string/menu_credits" />
    </group>
</menu>