<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.moreapps.MoreappsFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/screen">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/moreApps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moreapps"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:padding="20dp"
                android:textSize="20sp">
            </TextView>
            <ImageView
                android:id="@+id/imageMinescope"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:padding="20dp"
                android:src="@drawable/minescope"
                android:contentDescription="TODO">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/minescope">
            </TextView>
            <TextView
                android:id="@+id/minescope"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Download free Android"
                android:textColor="@color/blue">
            </TextView>
            <ImageView
                android:id="@+id/imageXtereo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:padding="20dp"
                android:src="@drawable/xtereo"
                android:contentDescription="TODO">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/xtereo">
            </TextView>
            <TextView
                android:id="@+id/xtereo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Download free Android"
                android:textColor="@color/blue">
            </TextView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>